<resources>
    <string name="app_name">testRetrofit</string>
    <string name="action_settings">Settings</string>
    <string name="address">Address:</string>
    <string name="name">Name:</string>
    <string name="vin">VIN:</string>
    <string name="exterior">Exterior:</string>
    <string name="interior">Interior:</string>
    <string name="engineType">Engine Type:</string>
    <string name="fuel">Fuel:</string>
</resources>
